--- a/_sass/minima/_vars.scss
+++ b/_sass/minima/_vars.scss
@@ -10,7 +10,7 @@ $spacing-unit:     30px !default;
 
 $text-color:       #111111 !default;
 $background-color: #fdfdfd !default;
-$brand-color:      #2a7ae2 !default;
+$link-color:       #1f72e0 !default;
 
 $grey-color:       #757575 !default;
 $grey-color-light: color.adjust($grey-color, $lightness: 40%) !default;
